objects/User_Preferences__c.object
<CustomObject>
    <label>User Preferences</label>
    <nameField>
        <displayFormat>UP-{0}</displayFormat>
        <label>User Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_List_Filter__c</fullName>
        <label>Activity List Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Site_Activity_List_Filter__c</fullName>
        <label>Multi-Site Activity List Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Site_Activity_List_Community__c</fullName>
        <label>Multi-Site Activity List Community</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>